# cookiecutter-docker-python-uv

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  pyproject.toml
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/.devcontainer/: devcontainer.json  docker-compose.dev.yml
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/src/: main.py
{{ cookiecutter.project_name.lower().replace(' ', '-') }}/tests/: test_main.py
